# vn-one-person-company

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXT-STEPS.md  NOTICE  README-USER.md  README.md  ROADMAP.md  SESSION-LOG.md  START-HERE.md  pyproject.toml
.claude/session-state/: latest.md
adapters/claude-code/: README.md  install.sh  skill.md
adapters/claude-cowork/: README.md  build-plugin.sh
core/: cli.py  install_mcp.py  mcp_server.py  onboard.py  upgrade.py  wikilinks.py
core/agents/: agent_loader.py  con_advocate.py  department.py  perspective_debators.py  pro_advocate.py  registry.py
core/brain/: gap_analyzer.py  reader.py
core/clarifier/: clarification_io.py  question_generator.py
core/llm/: providers.py
core/meeting/: checkpointer.py  meeting_graph.py  synthesizer.py
core/obsidian/: doc_writer.py  frontmatter.py  git_sync.py  template_resolver.py  vault.py
core/orchestrator/: citation_validator.py  classifier_rules.yaml  draft.py  flow_controller.py  perspectives_collector.py  router.py
core/tools/: base_tool.py  competitor_research.py  industry_benchmark.py  tax_calculator.py  tool_cache.py  vn_law_search.py  vn_local_regulation.py  web_search.py
docs/: architecture.md  configuration.md  getting-started.md  how-to-create-agent.md  how-to-create-pack.md  install-claude-code.md  troubleshooting.md  user-guide.md
plans/: phase-01-foundation.md  phase-06-adapters-e2e-onboard.md  plan.md  session-log-260506-implementation.md  v2-roadmap.md
scripts/: add_agent_aliases.py  add_dept_aliases.py  onboard.py
(+70 files in other folders)
