[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vn-one-person-company"
version = "0.2.0"
description = "AI Operating System for Vietnamese One-Person Companies — solo founder + 12 AI departments debate to decide and produce VN-compliant docs"
authors = [{ name = "VN Business OS Contributors" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "openai>=1.50.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "tavily-python>=0.5.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "gitpython>=3.1.40",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
vn-os = "core.cli:main"
vn-os-mcp = "core.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
